--- a/AlgoScript_Core/AlgoScript-dropbox-int.html
+++ b/AlgoScript_Core/AlgoScript-dropbox-int.html
@@ -4789,6 +4789,17 @@ function draw() {
 FrameRate = 20;
 Loop(-1);
 
+--------------------
+Cours_2/Historique_Execution.js
+--------------------
+// Historique d'exécution
+// Variables position,deplacement à inspecter, ne pas oublier de les ajouter dans le champs correspondant 
+var position, deplacement;
+position = 25;
+deplacement = 11;
+position = position + deplacement;
+Ecrire(position);
+
 
 
 </textarea>
